[package]
name = "frida-gum"
version = "0.10.0"
authors = ["Keegan Saunders <keegan@undefinedbehaviour.org>"]
edition = "2018"
license = "wxWindows"
repository = "https://github.com/frida/frida-rust"
description = "Rust bindings for Frida Gum"

[features]
auto-download = ["frida-gum-sys/auto-download"]
backtrace = ["libc"]
event-sink = ["frida-gum-sys/event-sink"]
invocation-listener = ["frida-gum-sys/invocation-listener"]
stalker-observer = ["frida-gum-sys/stalker-observer"]
stalker-params = ["frida-gum-sys/stalker-params"]

[dependencies]
frida-gum-sys = { path = "../frida-gum-sys", version = "0.6.0" }
num = "0.3.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
paste = "1"
libc = { version = "0.2.93", optional = true }
thiserror = "1"

[dependencies.capstone]
git = "https://github.com/domenukk/capstone-rs.git"
branch = "frida-cs"
features = ["frida"]

[dependencies.capstone-sys]
git = "https://github.com/domenukk/capstone-rs.git"
branch = "frida-cs"
features = ["frida"]

[dev-dependencies]
lazy_static = "1"

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
features = ["event-sink", "invocation-listener", "stalker-observer", "stalker-params"]
rustdoc-args = ["--cfg", "doc_cfg"]
